Revert "[UI] Fix vertical overflow bug on graph container"
This reverts commit 47607a3348b76c8293e97bf60c8a7310e652ac17.

--- a/frontend/app/index.css
+++ b/frontend/app/index.css
@@ -112,7 +112,6 @@ form[action$="destroy"] button {
   padding: 2rem 2rem;
   max-width: calc(100vw - 20rem);
   overflow-x: hidden; 
-  overflow-y: hidden;
   background-color: #fff;
   box-sizing: border-box;
   flex: 1;
